Fixed navbar collapse

--- a/DreamEasyApp/static/sass/_mixins.scss
+++ b/DreamEasyApp/static/sass/_mixins.scss
@@ -1,3 +1,5 @@
+$primary_color: rgb(58, 158, 228);
+
 @mixin backgroundImage($imgurl) {
     background-image: url($imgurl);
     background-size: cover;
@@ -34,19 +36,6 @@
     -o-filter: blur($amount);
     -ms-filter: blur($amount);
     filter: blur($amount);
-}
-
-@font-face {
-    font-family: 'oregonregular';
-    src: url('/static/fonts/oregon-webfont.eot');
-    src: url('/static/fonts/oregon-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/static/fonts/oregon-webfont.woff2') format('woff2'),
-         url('/static/fonts/oregon-webfont.woff') format('woff'),
-         url('/static/fonts/oregon-webfont.ttf') format('truetype'),
-         url('/static/fonts/oregon-webfont.svg#oregonregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
 }
 
 @font-face {
